improve webpack config to new format, fix spa server fallback

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --history-api-fallback --hot --inline --progress",
-    "build:prod": "webpack --config webpack.build.js --bail -p --progress --verbose",
-    "build:dev": "webpack --config webpack.config.js --bail -p --progress --verbose",
+    "build:prod": "webpack --config webpack.build.js --bail --progress --verbose",
+    "build:dev": "webpack --config webpack.config.js --bail --progress --verbose",
     "run:dist": "node spa-server.js"
   },
   "author": "",
@@ -35,9 +35,11 @@
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "raw-loader": "^0.5.1",
     "spa-server": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.6.0",
     "webpack-dev-server": "^2.4.5"
   },
